Updated project files

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="input.css">
-    <!-- <link rel="stylesheet" href="responsive.css"> -->
-     <link rel="stylesheet" href="responsivephon.css">
+    <link rel="stylesheet" href="responsive.css">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" </head>
 
@@ -146,17 +145,17 @@
 
                 <div class="done">
                     <div class="main">
-                        <img src="src/icon.png" alt="">
+                        <img src="src/Vector.svg" alt="">
                         <p>Software<br>Development</p>
                     </div>
 
                     <div class="main">
-                        <img src="src/iconone.png" alt="">
+                        <img src="src/logosvg.svg" alt="">
                         <p>Web<br>Development</p>
                     </div>
 
                     <div class="main">
-                        <img src="src/icontwo.png" alt="">
+                        <img src="src/Vector (1).svg" alt="">
                         <p>Web <br> Design</p>
                     </div>
                 </div>
@@ -172,24 +171,24 @@
                 <h2>My Skills</h2>
             </div>
 
-            <div class="count">
+            <div class="allcount">
                 <div>
-                    <h3>50%</h3>
+                    <h3 class="countthree">0</h3>
                     <p>HTML</p>
                 </div>
 
                 <div>
-                    <h3>20%</h3>
+                    <h3 class="counttwo">0</h3>
                     <p>CSS</p>
                 </div>
 
                 <div>
-                    <h3>10%</h3>
+                    <h3 class="countone">0</h3>
                     <p>JAVASCRIPT</p>
                 </div>
 
                 <div>
-                    <h3>2%</h3>
+                    <h3 class="count">0</h3>
                     <p>PHPL</p>
                 </div>
             </div>
@@ -203,6 +202,10 @@
             <div class="footer">
                 <div class="last">
                     <h1>Get in touch</h1>
+                </div>
+
+                <div >
+                    <h4 class="error"></h4>
                 </div>
                 <div class="all">
                     <div class="input">
@@ -219,6 +222,10 @@
                         <textarea name="text" placeholder="your massege">
                            
                         </textarea>
+                </div>
+
+                <div class="submit">
+                    <button class="sendbtn">Submit now</button>
                 </div>
             </div>
     </footer>
