Updated project files

--- a/index.html
+++ b/index.html
@@ -172,23 +172,35 @@
             </div>
 
             <div class="allcount">
-                <div>
-                    <h3 class="countthree">0</h3>
+                <div class="totalcount">
+                   <div class="persent">
+                     <h3 class="countthree">0</h3>
+                     <h3>%</h3>
+                   </div>
                     <p>HTML</p>
                 </div>
 
-                <div>
-                    <h3 class="counttwo">0</h3>
+                <div class="totalcount">
+                   <div class="persent">
+                     <h3 class="counttwo">0</h3>
+                      <h3>%</h3>
+                   </div>
                     <p>CSS</p>
                 </div>
 
-                <div>
-                    <h3 class="countone">0</h3>
+                <div class="totalcount">
+                   <div class="persent">
+                     <h3 class="countone">0</h3>
+                     <h3>%</h3>
+                   </div>
                     <p>JAVASCRIPT</p>
                 </div>
 
-                <div>
-                    <h3 class="count">0</h3>
+                <div class="totalcount">
+                    <div class="persent">
+                        <h3 class="count">0</h3>
+                        <h3>%</h3>
+                    </div>
                     <p>PHPL</p>
                 </div>
             </div>
